
Given a version number MAJOR.MINOR.PATCH:

* MAJOR version when making incompatible API changes,
* MINOR version when adding functionality in a backwards compatible manner,
* PATCH version when making backwards compatible bug fixes.

== 2.4.0 - unreleased

=== New features

* Add support for burstable instances (fix #66)
* Add support for Oracle Cloud Agent pulgins configuration (fix #17)

=== Fixes

* Instance display name no longer automatically append a number when only one instance is configured

== 2.3.0 - 2021-11-12

=== New features

* Add support for instance_state: the provisionned instance state can be RUNNING or STOPPED
* Add support for NSG: option to attach an NSG to the first VNIC

== 2.2.0 - 2021-09-27

=== Deprecated

* `var.ssh_authorized_keys` is deprecated. Use `var.ssh_public_keys`.
* `var.assign_public_ip` is deprecated. Use `var.public_ip` with the predefined keywords instead.

=== New features

* Add support for freeform and defined tags for instances, vnics and block volumes (Fix #10, #11, #12, #13, #18, #20)
* Add "module watermark" freeform tags: module defined and user defined freeform tags are merged on the final resource
* Add support to provide the `ssh_authorized_keys` argument as a string or as a file (Fix #67 #70)
* Add support for reserved Public IP on instance first VNIC (fix #55)
* Add support for backup policy on boot volume (fix #64)
* Add new outputs for each provisioned resources: "all_attributes" outputs have full provider coverage and are auto-updating.

=== Documentation

* Add add instructions on how to provide one or more public ssh keys using string, variable or file.

== 2.1.0 - 2021-03-02

=== New features

* support Flex instance shape (Issue #42)
* new output : instances_summary

=== Changes

* New examples for both Flex Instances and Fixed Shape Instances
* Documentation is now formatted with AsciiDoc

=== Fixes

* Outputs produces unnecessarily multidimensional objects (Issue #31)
* Repo maintenance: